fix spacing on page titles / contact error messages

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -315,7 +315,7 @@ input, textarea
     width: 100%
     
     h1
-      margin-bottom: 40px
+      margin-bottom: 0
     
     @media screen and (max-width: $break-small)
       max-width: 100%
@@ -366,6 +366,10 @@ a.continue-shopping-button
   list-style: none
   margin: 0 0 50px 0
   padding: 0
+  
+  &.contact-errors
+    @media screen and (max-width: $break-small)
+      margin: 25px 0 0 
   
 .footer-overlay
   +transition(all .3s)
